[package]
name = "egui_show_derive"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
egui_show = { path = "../egui_show" }
syn = { version = "1.0.85", features = ["extra-traits"] }
quote = "1.0.14"
proc-macro2 = "1.0.36"
